# genesis

./: .dockerignore  .env.example  .env.production.example  .gitignore  GENESIS_REQUIREMENTS.md  README.md  REQUIREMENTS.md  TASK_LIST.md  cloudflared-config.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.tunnel.yml  docker-compose.yml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy.yml  setup-domain.yml
backend/: .dockerignore  Dockerfile  alembic.ini  gunicorn.conf.py  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py
backend/scripts/: assign_struct_types.py  backfill_daily_stats.py  debug_agent_cycle.py  fix_empty_struct_types.py  regenerate_personalities.py  reset_agents.py  seed_torii.py  translate_to_english.py
backend/tests/: test_api.py  (+1 more)
docs/: DEPLOY_COMPLETE_GUIDE.md  DEPLOY_HETZNER.md  GENESIS_REALITY_DESIGN.md  SAGA_REQUIREMENTS.md  WEREWOLF_DESIGN.md
frontend/: .dockerignore  .env.production  Dockerfile  Dockerfile.prod  index.html  next.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts  wrangler.toml
genesis-sdk/: README.md  pyproject.toml
genesis-sdk/genesis_sdk/: __init__.py  client.py
local-agents/: .gitignore  driver.py
nginx/: Dockerfile  nginx.conf
scripts/: backup-db.sh  deploy.sh  dev.sh  god_code_bridge.py  healthcheck.sh  init-letsencrypt.sh  prod-start.sh  setup-tunnel.sh  setup.sh  test_election.py
struct-code/: Dockerfile.genesis  requirements-genesis.txt
(+490 files in other folders)
