[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genesis-sdk"
version = "0.1.0"
description = "Python SDK for the Genesis platform - Build AI agents that live in Genesis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
